# graph-theory-system-modeling

./: .gitignore  AUTHORS_DECLARATION.md  CHANGELOG.md  COMPLIANCE.md  DEVELOPMENT_SETUP.md  LICENSE  Readme.md  utputFormat
DockerFilesForReranking/: Dockerfile  README.md  build-and-run.ps1  reranker_server.py
GraphTheoryInSystemModeling/: 01_Living_Documentation_HoTT_Graph_Theory.md  02_Living_Documentation_Deep_Modeling.md  03_Living_Documentation_How_To_Start_For_Free.md  04_Living_Documentation_On_Demand_Real_Example.md  05_Living_Documentation_How_To_Add_Seat_Model_Real_Example.md  06_Living_Documentation_Win_Win_For_Customers_And_AI_Providers.md  Appendix_A_Mathematical_Bridge.md  Appendix_C_Neo4j_Native_Implementation_of_the_Information_Lensing.md  ChromaticNumbersInSystemModeling.md  ErdosLagrangianUnification.md  Five_Independent_Detectives_Method.md  appendix_information_lensing.md  enhanced_graph_pipeline.md
McpServerForEmbeddings/: .env.example  .gitignore  README.md  pyproject.toml  test_debug.py
McpServerForEmbeddings/src/qwen3_embedding_mcp/: __init__.py  __main__.py  config.py  embedding_engine.py  models.py  rest_server.py  server.py
McpServerForEmbeddings/tests/: __init__.py  test_config.py  test_engine.py
McpServerForReranking/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
McpServerForReranking/src/qwen3_reranker_mcp/: __init__.py  __main__.py  config.py  reranker_engine.py  server.py
McpServerForReranking/tests/: __init__.py  test_reranker.py
Promts/: ClaudeCode_ErdosOrchestrator_SystemPrompt.xml  Claude_Opus4_Sonnet4_Complete_Prompt_Engineering_Guide.md  Five_Independent_Detectives_Method.md  GPT5ClineErdosMcpMemory.xml  GPT5_ClineDebugger.xml  GPT5_Complete_Prompt_Engineering_Guide.md  Opus4.1_DeepModeling.xml  Opus4.1_GlobalSynthesis.xml  Opus4ErdosClaudeCodeEngineNeo4j.xml  Preferences_Opus4.1_Model.xml  README.md  Sonnet4.1_File_Index.xml  Sonnet4.5_Optimized_ErdosAnalyzer.xml  Sonnet4.5_SpringBoot_SystemPreferences.xml  Sonnet4ErdosClaudeCodeMcpMemory.xml  Sonnet4GraphsPreferences.xml  mcp_servers_mac_guide.md  neo4j_extensions_install.md
Promts/SystemModelingPromptsV2/: ErdosDeepModeling.xml  ErdosDeepModeling_Opus45_v4.5.4.xml  ErdosMasterOrchestrator.xml  GrothendiecGraphOrganizer.xml  HowToGenerateEmbeedings.md  HypatiaIndexingAgent.xml  HypatiaReindexWeekly.xml  SYSTEM_ARCHITECTURE.md
Real_Example_Documentation_On_Demands_Screenshots_And_Generated_Documentation/: Documentation_On_Demand.md
WorkingNotes/: 192GB_AM5_Overclock_Report.md  tensor-intuition.md  triple_lens_graph_pipeline.md
