[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen3-embedding-mcp"
version = "1.0.0"
description = "MCP Server for Qwen3-Embedding-8B - State-of-the-art text embeddings via Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Norbert Marchewka", email = "norbert@checkitout.pl" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "embeddings",
    "qwen3",
    "sentence-transformers",
    "semantic-search",
    "rag",
    "vector-database"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mcp>=1.0.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "hf_xet>=1.0.0",
    "flask>=3.0.0",  # REST API server for Neo4j APOC integration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/NorbertMarch662/qwen3-embedding-mcp"
Repository = "https://github.com/NorbertMarchewka/qwen3-embedding-mcp"
Issues = "https://github.com/NorbertMarchewka/qwen3-embedding-mcp/issues"

[project.scripts]
qwen3-embedding-mcp = "qwen3_embedding_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen3_embedding_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
