[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen3-reranker-mcp"
version = "1.0.0"
description = "MCP Server for Qwen3-Reranker-8B - State-of-the-art cross-encoder reranking via Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Norbert Marchewka", email = "norbert@checkitout.pl" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "reranker",
    "cross-encoder",
    "qwen3",
    "semantic-search",
    "information-retrieval",
    "rag",
    "information-lensing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mcp>=1.0.0",
    "transformers>=4.51.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "hf_xet>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/NorbertMarchewka/qwen3-reranker-mcp"
Repository = "https://github.com/NorbertMarchewka/qwen3-reranker-mcp"
Issues = "https://github.com/NorbertMarchewka/qwen3-reranker-mcp/issues"

[project.scripts]
qwen3-reranker-mcp = "qwen3_reranker_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen3_reranker_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
